--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "env": {
-    "SUPABASE_URL": "@supabase_url",
-    "SUPABASE_ANON_KEY": "@supabase_anon_key"
+    "SUPABASE_URL": "@NEXT_PUBLIC_SUPABASE_URL",
+    "SUPABASE_ANON_KEY": "@NEXT_PUBLIC_SUPABASE_ANON_KEY"
   }
 }
