--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.49.4",
         "next": "^14.2.28",
         "react": "^18.2.0",
