--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.49.4",
+        "bcryptjs": "^3.0.2",
         "next": "^14.2.28",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
