--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "bcryptjs": "^3.0.2",
         "next": "^14.2.28",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "supabase": "^2.22.12"
     }
 }
