--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.49.4",
         "bcryptjs": "^3.0.2",
+        "imagekit": "^6.0.0",
         "next": "^14.2.28",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
