--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -24,6 +24,7 @@
     "cookies-next": "^5.0.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
