--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -16,12 +16,15 @@
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.10",
+    "@supabase/supabase-js": "^2.50.4",
     "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
+    "dotenv": "^17.2.0",
+    "isomorphic-dompurify": "^2.26.0",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-intl": "^4.1.0",
